--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <section id="intro">
         <div class="container">
-            <img src="Mango-Ice-Cream.jpg" alt="Mango Delight Ice Cream">
+            <img src="Mango-icecream.jpg" alt="Mango Delight Ice Cream">
             <p>Mango Delight is a refreshing ice cream flavor made with rich, creamy mango puree and a touch of tropical sweetness. It's a perfect treat for mango lovers!</p>
         </div>
     </section>
@@ -31,7 +31,7 @@
     <footer>
         <div class="container">
             <div class="footer-logo">
-                <img src="LOGO.jpg" alt="Company Logo">
+                <img src="Logo.jpg" alt="Company Logo">
             </div>
             <div class="footer-info">
                 <h3>About Us</h3>
